tests/baselines/reference/parserTypeQuery4.errors.txt
parserTypeQuery4.ts(1,15): error TS2304: Cannot find name 'A'.
parserTypeQuery4.ts(1,17): error TS1003: Identifier expected.


==== parserTypeQuery4.ts (2 errors) ====
    var v: typeof A.;
                  ~
!!! error TS2304: Cannot find name 'A'.
                    ~
!!! error TS1003: Identifier expected.